test_programs/compile_failure/overlapping_mod/src/foo/mod.nr
pub fn bar() -> bool {
    true
}
